<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main2_scene2"
    tools:context=".activity.MainActivity2">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_380sdp"
        android:background="@color/yellow"
        app:layout_constraintBottom_toTopOf="@id/scroll"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/what_s_it_about"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_is_descriptions"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/who_s_it_for"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_description"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn1"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_40sdp"
        android:textSize="@dimen/_16sdp"
        android:backgroundTint="@color/black"
        android:text="@string/get_now"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/scroll"
        app:layout_constraintBottom_toTopOf="@id/scroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cons" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_130sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="@id/cons"
        app:layout_constraintLeft_toLeftOf="@id/cons"
        app:layout_constraintRight_toRightOf="@id/cons"
        app:layout_constraintTop_toTopOf="@id/cons">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingRight="@dimen/_40sdp"
        android:singleLine="true"
        android:text="iofdsio fioj fijsdfdsfsddsfsdfdsfo "
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_goneMarginTop="@dimen/_20sdp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="iofdsio fioj fijo "
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Rating\n 4.7"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:gravity="center"
            android:text="Pages\n 240"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_75sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:gravity="center"
            android:text="Languages\n ENG"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:gravity="center"
            android:text="Audio\n 4.7"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/save"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginRight="5dp"
        android:foregroundGravity="top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="@dimen/_20sdp"
        app:lottie_rawRes="@raw/bookmarkanim"/>


</androidx.constraintlayout.motion.widget.MotionLayout>